# sikozu

./: Makefile  Makefile.in  configure  configure.ac
examples/: simpledb.cpp  simpledb.h  simpledb.pb.cc  simpledb.pb.h  simpledb.proto
protobuf/: core.proto
python/: client.py  core_pb2.py
scripts/: sikozu.lua
src/: Makefile.am  Makefile.in  baseevent.h  baseservice.cpp  baseservice.h  basethread.cpp  basethread.h  bucket.cpp  bucket.h  bucketstore.cpp  bucketstore.h  client.cpp  client.h  common.h  contact.cpp  contact.h  core.pb.cc  core.pb.h  coreservice.cpp  coreservice.h  cqueue.h  finder.cpp  finder.h  main.cpp  nodeid.cpp  nodeid.h  packet.cpp  packet.h  packetheader.cpp  packetheader.h  rawpackethandler.cpp  rawpackethandler.h  remoteservice.cpp  remoteservice.h  request.cpp  request.h  server.cpp  server.h  service.cpp  service.h  (+14 more)
xcode/sikozu.xcodeproj/: project.pbxproj
