# what flags you want to pass to the C compiler & linker
AM_CFLAGS = --pedantic -Wall -O2
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = sikozu
sikozu_SOURCES = main.cpp nodeid.cpp packetheader.cpp baseservice.cpp coreservice.cpp server.cpp contact.cpp serviceregistry.cpp bucketstore.cpp request.cpp session.cpp core.pb.cc workerthread.cpp basethread.cpp
